fix(ui): improve text wrapping on #message

--- a/static/form.css
+++ b/static/form.css
@@ -35,6 +35,8 @@
     width: 100%;
     height: 60%;
     resize: none;
+    overflow-wrap: break-word;
+    white-space: normal;
 }
 
 #timeNumber, #timeUnit {
